add_executable(
        xheader_win32api_tests

        ${CMAKE_CURRENT_SOURCE_DIR}/create_window_ex_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/create_window_ex_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/debug_break.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/def_window_proc_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/def_window_proc_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/destroy_window.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/dispatch_message_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/dispatch_message_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_message_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_message_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_module_handle_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_module_handle_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_window_long_ptr_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/get_window_long_ptr_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/is_debugger_present.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/load_cursor_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/load_cursor_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/load_icon_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/load_icon_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/post_quit_message.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/register_class_ex_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/register_class_ex_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/set_window_long_ptr_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/set_window_long_ptr_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/show_window.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/translate_message.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/unregister_class_a.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/unregister_class_w.cxx
        ${CMAKE_CURRENT_SOURCE_DIR}/update_window.cxx
)

target_link_libraries(
        xheader_win32api_tests
        PRIVATE
        xheader
        gtest
        gmock
        gtest_main
        gmock_main
)

target_compile_features(
        xheader_win32api_tests
        PRIVATE
        cxx_std_23
        c_std_23
)

gtest_discover_tests(
        xheader_win32api_tests
)
